--- a/about.html
+++ b/about.html
@@ -8,7 +8,7 @@
 >
   <head>
     <meta charset="utf-8" />
-    <title>Poppins - Webflow Ecommerce website template</title>
+    <title>Coflex-About</title>
     <meta
       content="Unlock the power of intelligent code assistance with Spectra. Our AI-powered software revolutionises the coding experience, providing developers with seamless access to advanced tools and features."
       name="description"
@@ -64,7 +64,7 @@
       })(window, document);
     </script>
     <link
-      href="6607a7c3c0e5cc14e410d406/66138ae8314a52787347fa95_Favicon.png"
+
       rel="shortcut icon"
       type="image/x-icon"
     />
