--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 >
   <head>
     <meta charset="utf-8" />
-    <title>Poppins - Webflow Ecommerce website template</title>
+    <title>Coflex - Business Partnership Made Easy</title>
     <meta
       content="Unlock the power of intelligent code assistance with Spectra. Our AI-powered software revolutionises the coding experience, providing developers with seamless access to advanced tools and features."
       name="description"
