--- a/about.html
+++ b/about.html
@@ -64,7 +64,7 @@
       })(window, document);
     </script>
     <link
-
+href="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcRbG9MVLOJ3aFygQq9VQiMP4AVni4wEEDRP75a7f5iWKg&s"
       rel="shortcut icon"
       type="image/x-icon"
     />
@@ -274,7 +274,7 @@
                             </li>
                             <li class="menu-list-item">
                               <a
-                                href="terms-conditions.html"
+                                href="terms of Services.html"
                                 class="nav-link w-inline-block"
                                 ><div class="nav-text-link-holder">
                                   <div class="nav-link-text">
@@ -2127,7 +2127,7 @@
                     data-name="Email Form"
                     method="get"
                     class="sign-up-form"
-                    data-wf-page-id="6607a7c3c0e5cc14e410d450"
+                    data-wf-page-id="about-people-coflex-id"
                     data-wf-element-id="6b81382b-03e2-502d-5281-66b51d7c813b"
                   >
                     <input
@@ -2203,7 +2203,8 @@
             <div class="footer-description">
              
 
-Lorem ipsum dolor sit amet, consectetur adipiscing elit. Ut aliquet venenatis nunc. Nullam eu odio scelerisque, rutrum magna nec, pretium nunc. Vivamus fermentum sit amet nisl non ultrices.
+Lorem ipsum dolor sit amet, consectetur adipiscing elit. 
+Ut aliquet venenatis nunc. Nullam eu odio scelerisque, rutrum magna nec, pretium nunc. Vivamus fermentum sit amet nisl non ultrices.
             </div>
             <div class="social-media-link-holder">
               <a
@@ -2375,7 +2376,7 @@ Lorem ipsum dolor sit amet, consectetur adipiscing elit. Ut aliquet venenatis nu
                   href=""
                   class="footer-link w-inline-block"
                   ><div>EULA</div></a
-                ><a href="terms-conditions.html" class="footer-link w-inline-block"
+                ><a href="terms of Serivces" class="footer-link w-inline-block"
                   ><div>Terms of Services</div></a
                 ><a
                   href="privacy-policy.html"
