--- a/feature.html
+++ b/feature.html
@@ -8,7 +8,7 @@
 >
   <head>
     <meta charset="utf-8" />
-    <title>Poppins - Webflow Ecommerce website template</title>
+    <title>Coflex-Feature</title>
     <meta
       content="Unlock the power of intelligent code assistance with Spectra. Our AI-powered software revolutionises the coding experience, providing developers with seamless access to advanced tools and features."
       name="description"
@@ -64,7 +64,7 @@
       })(window, document);
     </script>
     <link
-      href="6607a7c3c0e5cc14e410d406/66138ae8314a52787347fa95_Favicon.png"
+      href="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcRbG9MVLOJ3aFygQq9VQiMP4AVni4wEEDRP75a7f5iWKg&s"
       rel="shortcut icon"
       type="image/x-icon"
     />
@@ -274,7 +274,7 @@
                             </li>
                             <li class="menu-list-item">
                               <a
-                                href="terms-conditions.html"
+                                href="terms of Services.html"
                                 class="nav-link w-inline-block"
                                 ><div class="nav-text-link-holder">
                                   <div class="nav-link-text">
@@ -1261,7 +1261,7 @@
                           </li>
                           <li class="menu-list-item">
                             <a
-                              href="terms-conditions.html"
+                              href="terms of Services.html"
                               class="nav-link w-inline-block"
                               ><div class="nav-text-link-holder">
                                 <div class="nav-link-text">
@@ -4821,7 +4821,7 @@ Lorem ipsum dolor sit amet, consectetur adipiscing elit. Ut aliquet venenatis nu
                   href=""
                   class="footer-link w-inline-block"
                   ><div>EULA</div></a
-                ><a href="terms-conditions.html" class="footer-link w-inline-block"
+                ><a href="terms of Services.html" class="footer-link w-inline-block"
                   ><div>Terms of Services</div></a
                 ><a
                   href="privacy-policy.html"
