--- a/pricing.html
+++ b/pricing.html
@@ -5,7 +5,7 @@
 
 <head>
   <meta charset="utf-8">
-  <title>Poppins - Webflow Ecommerce website template</title>
+  <title>Coflex-Pricing</title>
   <meta
     content="Unlock the power of intelligent code assistance with Spectra. Our AI-powered software revolutionises the coding experience, providing developers with seamless access to advanced tools and features."
     name="description">
@@ -29,7 +29,7 @@
     type="text/javascript">WebFont.load({ google: { families: ["Poppins:300,regular,500,600,700,800"] } });</script>
   <script
     type="text/javascript">!function (o, c) { var n = c.documentElement, t = " w-mod-"; n.className += t + "js", ("ontouchstart" in o || o.DocumentTouch && c instanceof DocumentTouch) && (n.className += t + "touch") }(window, document);</script>
-  <link href="6607a7c3c0e5cc14e410d406/66138ae8314a52787347fa95_Favicon.png" rel="shortcut icon" type="image/x-icon">
+  <link href="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcRbG9MVLOJ3aFygQq9VQiMP4AVni4wEEDRP75a7f5iWKg&s" rel="shortcut icon" type="image/x-icon">
   <link href="6607a7c3c0e5cc14e410d406/66138aeb073b640268fc4122_Webclip.png" rel="apple-touch-icon">
   <script
     type="text/javascript">window.__WEBFLOW_CURRENCY_SETTINGS = { "currencyCode": "USD", "symbol": "$", "decimal": ".", "fractionDigits": 2, "group": ",", "template": "{{wf {\"path\":\"symbol\",\"type\":\"PlainText\"} }} {{wf {\"path\":\"amount\",\"type\":\"CommercePrice\"} }} {{wf {\"path\":\"currencyCode\",\"type\":\"PlainText\"} }}", "hideDecimalForWholeNumbers": false };</script>
@@ -224,7 +224,7 @@
                         </li>
                         <li class="menu-list-item">
                           <a
-                            href="terms-conditions.html"
+                            href="terms of Services.html"
                             class="nav-link w-inline-block"
                             ><div class="nav-text-link-holder">
                               <div class="nav-link-text">
@@ -2087,7 +2087,7 @@ Lorem ipsum dolor sit amet, consectetur adipiscing elit. Ut aliquet venenatis nu
                 href=""
                 class="footer-link w-inline-block"
                 ><div>EULA</div></a
-              ><a href="terms-conditions.html" class="footer-link w-inline-block"
+              ><a href="terms of Services.html" class="footer-link w-inline-block"
                 ><div>Terms of Services</div></a
               ><a
                 href="privacy-policy.html"
