--- a/use-case/usecase-3.html
+++ b/use-case/usecase-3.html
@@ -8,7 +8,7 @@
 >
   <head>
     <meta charset="utf-8" />
-    <title>Curating Marketing Data with AI | Poppins</title>
+    <title>Coflex-Usecase-3</title>
     <meta
       content="Boost your website&#x27;s visibility with Poppins. Find the best keywords, optimize your content, and climb the search engine rankings effortlessly."
       name="description"
@@ -46,7 +46,7 @@
       })(window, document);
     </script>
     <link
-      href="../6607a7c3c0e5cc14e410d406/66138ae8314a52787347fa95_Favicon.png"
+      href="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcRbG9MVLOJ3aFygQq9VQiMP4AVni4wEEDRP75a7f5iWKg&s"
       rel="shortcut icon"
       type="image/x-icon"
     />
@@ -257,7 +257,7 @@
                             </li>
                             <li class="menu-list-item">
                               <a
-                                href="../terms-conditions.html"
+                                href="../terms of Services.html"
                                 class="nav-link w-inline-block"
                                 ><div class="nav-text-link-holder">
                                   <div class="nav-link-text">
@@ -1459,7 +1459,7 @@ Lorem ipsum dolor sit amet, consectetur adipiscing elit. Ut aliquet venenatis nu
                   href=""
                   class="footer-link w-inline-block"
                   ><div>EULA</div></a
-                ><a href="../terms-conditions.html" class="footer-link w-inline-block"
+                ><a href="../terms of Services.html" class="footer-link w-inline-block"
                   ><div>Terms of Services</div></a
                 ><a
                   href="../privacy-policy.html"
